Increase footer contrast to match with new branding

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -105,7 +105,7 @@
 
 .site-footer {
     color: $text-color-light;
-    background-color: #4d4f53;
+    background-color: #161616;
     padding: 40px 0;
     font-size: 0.9em;
     line-height: 1.3;
