Delete unused sass file

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -54,6 +54,5 @@ $on-laptop:        992px;
 @import
         "base",
         "layout",
-        "search",
-        "syntax-highlighting"
+        "search"
 ;
