Delete unused sass file

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -53,6 +53,5 @@ $on-laptop:        992px;
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
         "base",
-        "layout",
-        "syntax-highlighting"
+        "layout"
 ;
