--- a/_includes/es/activities.html
+++ b/_includes/es/activities.html
@@ -7,7 +7,7 @@
   <div class="item-content" markdown="1">
 Larissa Shapiro, and the D&I Team at Mozilla have been busy this year, developing a 2.0 of the [Mozilla Community Participation](https://www.mozilla.org/en-US/about/governance/policies/participation/) Guidelines(CPG), and we are bringing [this draft to you](/assets/pdf/MozillaCommunityParticipationGuidelines-ES.pdf), Mozilla's community, for feedback before release in early April. Completing this activity is a valuable contribution to Mozilla, and recognition of that contribution is included as a final step.
 
-[Find out more](/community-participation-guideline/).
+[Descubre más](/community-participation-guideline/).
   </div>
   <footer class="item-footer">
     <div class="tags">Participation</div>
@@ -23,7 +23,7 @@ Larissa Shapiro, and the D&I Team at Mozilla have been busy this year, developin
   <div class="item-content" markdown="1">
 Add-ons provide a safe, simple, and powerful way to personalize your browsing experience. With WebExtensions APIs, it’s easier than ever to create extensions that can be easily ported to Firefox, Chrome, Edge, and Opera. Through this activity you’ll help connect new developers with an opportunity to create add-ons to solve real problems and make their lives and the web better.
 
-[Find out more](/webextensions/).
+[Descubre más](/webextensions/).
   </div>
   <footer class="item-footer">
     <div class="tags">Programming</div>
@@ -39,7 +39,7 @@ Add-ons provide a safe, simple, and powerful way to personalize your browsing ex
   <div class="item-content" markdown="1">
 Rust is a systems programming language important to the future of the web. It runs blazingly fast, prevents segfaults, and guarantees thread safety. With your help, we want more developers to understand, use and evangelize this language in order to make the web better and more secure.
 
-[Find out more](/rust-hack/).
+[Descubre más](/rust-hack/).
   </div>
   <footer class="item-footer">
     <div class="tags">Programming</div>
@@ -55,7 +55,7 @@ Rust is a systems programming language important to the future of the web. It ru
   <div class="item-content" markdown="1">
 A-Frame is a web framework for building virtual reality experiences, making it easy for anyone to get involved with virtual reality. Run events to onboard developers into 3D and write some great demos. This will advance WebVR, an open platform for virtual reality that leverages the Web.
 
-[Find out more](/webvr-camp/).
+[Descubre más](/webvr-camp/).
   </div>
   <footer class="item-footer">
     <div class="tags">Programming</div>
@@ -69,9 +69,9 @@ A-Frame is a web framework for building virtual reality experiences, making it e
   </header>
   <h2><a href="/webcompat-sprint/">Web Compatibility Sprint</a></h2>
   <div class="item-content" markdown="1">
-Web Compatibility, the ability for all Web content to run in all browsers, is important. There are multiple web content engines running on multiple devices, and sometimes with a little testing and some small tweaks to their site, developers can ensure that more users can have the full experience that is desired. Test sites and spread the message about compatibility.
+Web Compatibility, the ability for all Web content to run in all browsers, is important. Hay muchos motores web de contenido que se ejecutan en varios dispositivos y, a veces, con pequeñas pruebas y algún que otro cambio en la página, los desarrolladores pueden garantizarles a los usuarios una experiencia completa. Test sites and spread the message about compatibility.
 
-[Find out more](/webcompat-sprint/).
+[Descubre más](/webcompat-sprint/).
   </div>
   <footer class="item-footer">
     <div class="tags">Testing</div>
