Fix links in locales

--- a/_includes/pt/activities.html
+++ b/_includes/pt/activities.html
@@ -3,11 +3,11 @@
   <header class="item-header">
     <img src="/assets/img/guidelines-header.png" alt="Header image">
   </header>
-  <h2><a href="/community-participation-guideline/">Community Participation Guidelines</a></h2>
+  <h2><a href="/pt/community-participation-guideline/">Community Participation Guidelines</a></h2>
   <div class="item-content" markdown="1">
 Larissa Shapiro, and the D&I Team at Mozilla have been busy this year, developing a 2.0 of the [Mozilla Community Participation](https://www.mozilla.org/en-US/about/governance/policies/participation/) Guidelines(CPG), and we are bringing [this draft to you](https://docs.google.com/document/d/1sElGXuZ0W31iPshvmj0CR2f6woF6V8wqrrJHzJ0pnpU/edit#heading=h.rf21kwgxk0hb), Mozilla's community, for feedback before release in early April. Completing this activity is a valuable contribution to Mozilla, and recognition of that contribution is included as a final step.
 
-[Saiba mais](/community-participation-guideline/).
+[Saiba mais](/pt/community-participation-guideline/).
   </div>
   <footer class="item-footer">
     <div class="tags">Participation</div>
@@ -19,11 +19,11 @@ Larissa Shapiro, and the D&I Team at Mozilla have been busy this year, developin
   <header class="item-header">
     <img src="/assets/img/webextensions-header.png" alt="Header image">
   </header>
-  <h2><a href="/webextensions/">Build Your Own WebExtension Add-on for Firefox</a></h2>
+  <h2><a href="/pt/webextensions/">Build Your Own WebExtension Add-on for Firefox</a></h2>
   <div class="item-content" markdown="1">
 Add-ons provide a safe, simple, and powerful way to personalize your browsing experience. With WebExtensions APIs, it’s easier than ever to create extensions that can be easily ported to Firefox, Chrome, Edge, and Opera. Through this activity you’ll help connect new developers with an opportunity to create add-ons to solve real problems and make their lives and the web better.
 
-[Saiba mais](/webextensions/).
+[Saiba mais](/pt/webextensions/).
   </div>
   <footer class="item-footer">
     <div class="tags">Programming</div>
@@ -35,11 +35,11 @@ Add-ons provide a safe, simple, and powerful way to personalize your browsing ex
   <header class="item-header">
     <img src="/assets/img/rust-header.png" alt="Header image">
   </header>
-  <h2><a href="/rust-hack/">Dive Into Rust</a></h2>
+  <h2><a href="/pt/rust-hack/">Dive Into Rust</a></h2>
   <div class="item-content" markdown="1">
 Rust é uma linguagem de programação para sistemas, importante para o futuro da Web. Ela roda extremamente rápido, previne falhas de acesso do sistema e garante a segurança dos processos. Com sua ajuda nós queremos que mais desenvolvedores entendam, usem e evangelizem essa linguagem, desta forma faremos a Web melhor e mais segura.
 
-[Saiba mais](/rust-hack/).
+[Saiba mais](/pt/rust-hack/).
   </div>
   <footer class="item-footer">
     <div class="tags">Programming</div>
@@ -51,11 +51,11 @@ Rust é uma linguagem de programação para sistemas, importante para o futuro d
   <header class="item-header">
     <img src="/assets/img/webvr-header.png" alt="Header image">
   </header>
-  <h2><a href="/webvr-camp/">WebVR Camp</a></h2>
+  <h2><a href="/pt/webvr-camp/">WebVR Camp</a></h2>
   <div class="item-content" markdown="1">
 O A-Frame é um framework web para o desenvolvimento de experiências com Realidade Virtual, tornando fácil para qualquer um se envolver com Realidade Virtual. Realize eventos para introduzir o ambiente 3D para desenvolvedores e programe algumas demonstrações legais. Isso irá promover o WebVR, uma plataforma aberta para realidade virtual que irá alavancar a Web.
 
-[Saiba mais](/webvr-camp/).
+[Saiba mais](/pt/webvr-camp/).
   </div>
   <footer class="item-footer">
     <div class="tags">Programming</div>
@@ -67,11 +67,11 @@ O A-Frame é um framework web para o desenvolvimento de experiências com Realid
   <header class="item-header">
     <img src="/assets/img/webcompat-header.png" alt="Header image">
   </header>
-  <h2><a href="/webcompat-sprint/">Sprint de Compatibilidade Web</a></h2>
+  <h2><a href="/pt/webcompat-sprint/">Sprint de Compatibilidade Web</a></h2>
   <div class="item-content" markdown="1">
 A Compatibilidade Web, capacidade de executar todo e qualquer conteúdo da Web em todos os navegadores, é importante. Existem diversos mecanismos de conteúdos web executando em diversos dispositivos, e algumas vezes com um pouco de teste e pequenos ajustes em seus websites, desenvolvedores podem garantir que mais usuários tenham a experiência completa desejada. Teste websites e espalhe a mensagem sobre compatibilidade.
 
-[Saiba mais](/webcompat-sprint/).
+[Saiba mais](/pt/webcompat-sprint/).
   </div>
   <footer class="item-footer">
     <div class="tags">Testing</div>
