add a specific image to the top of Activity details

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -6,7 +6,6 @@
     min-height: 40px;
     background: $brand-color;
     height: 60px;
-
     // Positioning context for the mobile navigation icon
     position: relative;
 
@@ -17,8 +16,8 @@
     }
 
     a.page-link,
-    a.page-link:focus,
-    a.page-link:active {
+    a.page-link:active,
+    a.page-link:focus {
         color: white;
     }
 
@@ -27,7 +26,7 @@
     }
 
     button.navbar-toggle {
-        margin: 0px;
+        margin: 0;
         font-size: 1.5em;
     }
 }
@@ -42,9 +41,11 @@
     margin-right: 23px;
     float: left;
 
-    &, &:visited {
+    &,
+    &:visited {
         color: #e29fa0;
     }
+
     &:hover {
         color: #fff;
         text-decoration: none;
@@ -60,9 +61,11 @@
     margin-right: 20px;
     float: left;
 
-    &, &:visited {
+    &,
+    &:visited {
         color: #e29fa0;
     }
+
     &:hover {
         color: #fff;
         text-decoration: none;
@@ -84,9 +87,7 @@
 
     .lead {
         color: white;
-        margin: auto;
-        margin-bottom: 20px;
-        margin-top: 20px;
+        margin: 20px auto;
         font-weight: 300;
     }
 }
@@ -94,14 +95,12 @@
 .index-notice {
     margin-bottom: 30px;
 }
-
-
 /**
  * Site footer
  */
- .home .site-footer {
-     margin-top: -150px;
- }
+.home .site-footer {
+    margin-top: -150px;
+}
 
 .site-footer {
     color: $text-color-light;
@@ -121,7 +120,6 @@
             margin: 0 1.125rem;
             min-width: 120px;
             font-size: 1.1em;
-
             @include media-query($on-palm) {
                 display: block;
                 width: 100%;
@@ -131,14 +129,12 @@
                 .footer-icon {
                     max-width: 18px;
                     margin-right: 5px;
-
                     @include media-query($on-palm) {
                         display: block;
                         margin: 5px auto;
                         width: 20px;
                     }
                 }
-
                 @include media-query($on-palm) {
                     text-align: center;
                 }
@@ -179,8 +175,6 @@
         }
     }
 }
-
-
 /**
  * Page content
  */
@@ -204,66 +198,66 @@
             padding-bottom: 32px;
 
             .item-header {
-              margin-right: -15px;
-              margin-left: -15px;
+                margin-right: -15px;
+                margin-left: -15px;
             }
 
             h2 {
-              font-size: 2rem;
-              text-align: center;
+                font-size: 2rem;
+                text-align: center;
             }
 
             &.retired {
-              padding-top: 0;
+                padding-top: 0;
 
-              img {
-                -webkit-filter: grayscale(100%);
-                filter: grayscale(100%);
-              }
+                img {
+                    -webkit-filter: grayscale(100%);
+                    filter: grayscale(100%);
+                }
             }
 
             .retired-note {
-              color: $red-color;
+                color: $red-color;
             }
 
             footer {
-              position: absolute;
-              bottom: 0px;
-              width: 100%;
-              font-size: 0.75em;
-              font-weight: 700;
-              text-transform: uppercase;
-              line-height: 25px;
-              display: -webkit-box;
-              display: -webkit-flex;
-              display: -ms-flexbox;
-              display: flex;
-              justify-content: space-between;
-              padding-right: 42px;
+                position: absolute;
+                bottom: 0;
+                width: 100%;
+                font-size: 0.75em;
+                font-weight: 700;
+                text-transform: uppercase;
+                line-height: 25px;
+                display: -webkit-box;
+                display: -webkit-flex;
+                display: -ms-flexbox;
+                display: flex;
+                justify-content: space-between;
+                padding-right: 42px;
             }
 
             &.programming {
-              border-bottom: 3px solid $green-color;
+                border-bottom: 3px solid $green-color;
 
-              footer {
-                color: $green-color;
-              }
+                footer {
+                    color: $green-color;
+                }
             }
 
             &.testing {
-              border-bottom: 3px solid $red-color;
+                border-bottom: 3px solid $red-color;
 
-              footer {
-                color: $red-color;
-              }
+                footer {
+                    color: $red-color;
+                }
             }
 
             &.participation {
-              border-bottom: 3px solid $blue-color;
+                border-bottom: 3px solid $blue-color;
 
-              footer {
-                color: $blue-color;
-              }
+                footer {
+                    color: $blue-color;
+                }
             }
         }
 
@@ -290,7 +284,7 @@
         }
 
         .hidden {
-          display: none;
+            display: none;
         }
     }
 
@@ -328,6 +322,10 @@
         margin-top: 40px;
     }
 
+    .activity-page {
+      padding: 0;
+    }
+
     .activity-img {
         max-width: 80px;
     }
@@ -347,13 +345,13 @@
                 margin-left: 5px;
                 margin-top: -2px;
                 background-color: #aaa;
-                padding: .1em .5em;
-                font-size: .75em;
+                padding: 0.1em 0.5em;
+                font-size: 0.75em;
                 color: #fff;
                 text-align: center;
                 white-space: nowrap;
                 vertical-align: baseline;
-                border-radius: .25em;
+                border-radius: 0.25em;
             }
 
             a {
@@ -366,7 +364,7 @@
         margin: 0 0 0 270px;
         display: inline-block;
         border-width: 0 0 0 2px;
-        padding: 10px 12px 10px 12px;
+        padding: 10px 12px;
         background-size: 18px;
         background-position: 8px center;
         background-repeat: no-repeat;
@@ -381,22 +379,20 @@
         padding: 10px;
         border-left: solid 2px #31708f;
     }
-
     @media all and (max-width: 991px) {
         .timebox {
             margin-left: 260px;
         }
     }
-
     @media all and (max-width: 768px) {
         .timebox {
             margin-left: 0;
         }
     }
-
 }
 
-.page-heading, .home h1 {
+.home h1,
+.page-heading {
     color: $brand-color;
     margin-top: 5px;
     font-size: 4.5rem;
@@ -410,7 +406,7 @@
         font-size: 2rem;
         text-align: center;
         margin: 1.5em auto;
-        padding-top: 0em;
+        padding-top: 0;
         clear: both;
     }
 
@@ -483,9 +479,6 @@
     padding: 15px;
     background-color: #f2dede;
 }
-
-
-
 /**
  * Posts
  */
@@ -495,13 +488,15 @@
 
 .post-header {
     margin-bottom: $spacing-unit;
+    padding: 30px 0;
+    background: #f5f5f5;
+    border-top: 10px solid #778492;
 }
 
 .post-title {
     font-size: 42px;
     letter-spacing: -1px;
     line-height: 1;
-
     @include media-query($on-laptop) {
         font-size: 36px;
     }
@@ -509,12 +504,13 @@
 
 .post-content > h2,
 .post-content > h3,
+.post-content > ol,
 .post-content > p,
-.post-content > ul,
-.post-content > ol {
+.post-content > ul {
     width: 800px;
-    float:right;
+    float: right;
 }
+
 .post-content > #markdown-toc {
     width: 230px;
     position: fixed;
@@ -525,36 +521,34 @@
         color: #eee;
     }
 }
-
 @media all and (max-width: 1200px) {
     .post-content > h2,
     .post-content > h3,
+    .post-content > ol,
     .post-content > p,
-    .post-content > ul,
-    .post-content > ol {
+    .post-content > ul {
         width: 600px;
     }
 }
-
 @media all and (max-width: 991px) {
     .post-content > h2,
     .post-content > h3,
+    .post-content > ol,
     .post-content > p,
-    .post-content > ul,
-    .post-content > ol {
+    .post-content > ul {
         width: 390px;
     }
 }
-
 @media all and (max-width: 768px) {
     .post-content > h2,
     .post-content > h3,
+    .post-content > ol,
     .post-content > p,
-    .post-content > ul,
-    .post-content > ol {
+    .post-content > ul {
         width: auto;
         float: none;
     }
+
     .post-content > #markdown-toc {
         display: none;
     }
@@ -570,27 +564,28 @@
         width: auto;
     }
 
-    ul, ol {
+    ol,
+    ul {
         margin-left: 0;
         padding-left: 15px;
     }
 }
-
 /* Language list */
-.en:lang(en), .es:lang(es), .pt:lang(pt), .fr:lang(fr) {
+.en:lang(en),
+.es:lang(es),
+.fr:lang(fr),
+.pt:lang(pt) {
     font-weight: bold;
 }
-
 
 .post-languages {
     clear: both;
     padding-left: 10px;
     margin-left: 10px;
     border-left: 1px solid #666;
-
     @include media-query($on-laptop) {
-        .language-list,
-        .add-translation {
+        .add-translation,
+        .language-list {
             text-align: center;
         }
     }
@@ -619,6 +614,39 @@
     text-align: center;
 }
 
+.grey-share {
+    span {
+        box-shadow: 0 0 5px 1px #ccc;
+    }
+
+    a {
+        display: inline-block;
+        height: 30px;
+        width: 30px;
+        opacity: 0;
+    }
+
+    .grey-twitter {
+        background: url("/assets/img/twitter.png") no-repeat #999;
+        background-size: 20px 20px;
+        height: 35px;
+        width: 35px;
+        display: inline-block;
+        border-radius: 17px;
+        background-position: 8px 8px;
+    }
+
+    .grey-facebook {
+        background: url("/assets/img/facebook.png") no-repeat #999;
+        background-size: 20px 20px;
+        height: 35px;
+        width: 35px;
+        display: inline-block;
+        border-radius: 17px;
+        background-position: 8px 8px;
+    }
+}
+
 .share {
     position: absolute;
     margin-top: -70px;
@@ -632,9 +660,8 @@
         opacity: 0.6;
         height: 40px;
         width: 48px;
-        box-shadow: 1px 0px 1px 1px #CCC;
-        margin: auto;
-        margin-top: 7px;
+        box-shadow: 1px 0 1px 1px #CCC;
+        margin: 7px auto auto;
         border-radius: 6px;
 
         &:hover {
@@ -647,7 +674,7 @@
             color: #FFF;
             padding-top: 8px;
             opacity: 0;
-            transition: padding-left .5s, width .5s, opacity .2s ease-in;
+            transition: padding-left 0.5s, width 0.5s, opacity 0.2s ease-in;
 
             &:hover {
                 text-decoration: none;
@@ -658,6 +685,7 @@
             }
         }
     }
+
     p.twitter {
         background: url("/assets/img/twitter.png") no-repeat #0c99d5;
         background-position: 8px 4px;
@@ -676,7 +704,7 @@ div.facebook {
 #markdown-toc {
     padding: 15px 20px 15px 35px;
     background: #f4f7f8;
-    margin-left: 0px;
+    margin-left: 0;
     display: table;
     border-left: solid 2px #acb0bd;
     background-color: $brand-color;
@@ -702,38 +730,40 @@ div.facebook {
 }
 
 #tabzilla {
-    position:relative;
-    float:right
+    position: relative;
+    float: right;
 }
+
 #tabzilla a {
-    position:relative;
-    display:block;
-    width:147px;
-    height:37px;
-    text-indent:120%;
-    white-space:nowrap;
-    overflow:hidden;
-    background-image:url(https://www.mozilla.org/media/img/tabzilla/tabzilla-static.png);
-    background-repeat:no-repeat;
-    z-index:2
+    position: relative;
+    display: block;
+    width: 147px;
+    height: 37px;
+    text-indent: 120%;
+    white-space: nowrap;
+    overflow: hidden;
+    background-image: url("https://www.mozilla.org/media/img/tabzilla/tabzilla-static.png");
+    background-repeat: no-repeat;
+    z-index: 2;
 }
 @media(-webkit-min-device-pixel-ratio:1.5),(min--moz-device-pixel-ratio:1.5),(-o-min-device-pixel-ratio:3/2),(min-resolution:1.5dppx) {
     #tabzilla a {
-        background-image:url(https://www.mozilla.org/media/img/tabzilla/tabzilla-static-high-res.png);
-        -webkit-background-size:147px 37px;
-        background-size:147px 37px
+        background-image: url("https://www.mozilla.org/media/img/tabzilla/tabzilla-static-high-res.png");
+        -webkit-background-size: 147px 37px;
+        background-size: 147px 37px;
     }
 }
+
 #tabzilla:before {
-    position:absolute;
-    display:block;
-    left:28px;
-    top:0;
-    width:88px;
-    height:26px;
-    content:'';
-    background-color:transparent;
-    z-index:1
+    position: absolute;
+    display: block;
+    left: 28px;
+    top: 0;
+    width: 88px;
+    height: 26px;
+    content: '';
+    background-color: transparent;
+    z-index: 1;
 }
 
 #leaderboard {
@@ -754,7 +784,7 @@ div.facebook {
 }
 
 .frontpage-slider {
-    margin-left: 0px;
+    margin-left: 0;
 
     li {
         span {
@@ -783,8 +813,8 @@ div.facebook {
         display: none;
     }
 }
-
 // Bootstrap Overwrites
+
 table.sortable > thead th:hover:not([data-defaultsort="disabled"]) {
-  background-color: $brand-color-lighter;
+    background-color: $brand-color-lighter;
 }
