addressing MK's review comments and making it a little bit prettier

--- a/_layouts/activity.html
+++ b/_layouts/activity.html
@@ -6,12 +6,12 @@ layout: activity-default
 <article class="post">
 
   <header class="post-header row">
-    <div class="col-xs-3 text-center">
+    <div class="col-xs-12 col-sm-3 text-center">
       <header class="post-header-image">
         <img src="{{ page.image }}" alt="Header image">
       </header>
     </div>
-    <div class="col-xs-9">
+    <div class="col-xs-12 col-sm-9">
       <h1 class="post-title">{{ page.title }}</h1>
       {% if page.subtitle %}
         <h3>{{ page.subtitle }}</h3>
