--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -27,6 +27,11 @@ $background-color: #fff;
 $brand-color:      #3f4b73;
 $brand-color-light: lighten($brand-color, 20%);
 
+$page-header-background: #f5f5f5;
+$page-header-border: #778492;
+$activity-background: #DAE3E7;
+$post-content-background: #FFFFFF;
+
 // Width of the content area
 $content-width:    960px;
 
