Address review comments.

--- a/_includes/activities.html
+++ b/_includes/activities.html
@@ -79,4 +79,6 @@ Web Compatibility, the ability for all Web content to run in all browsers, is im
   </footer>
 </div>
 </div>
-<script src="/assets/js/search.js"></script>
+<script src="/assets/js/search.js" data-label-text="Filter for …"
+        data-input-placeholder="tag or headline">
+</script>
