--- a/_includes/fr/activities.html
+++ b/_includes/fr/activities.html
@@ -79,3 +79,6 @@ Web Compatibility, the ability for all Web content to run in all browsers, is im
   </footer>
 </div>
 </div>
+<script src="/assets/js/search.js" data-label-text="Filtre pour …"
+        data-input-placeholder="étiquette ou titre">
+</script>
