--- a/_includes/pt/activities.html
+++ b/_includes/pt/activities.html
@@ -79,3 +79,6 @@ A Compatibilidade Web, capacidade de executar todo e qualquer conteúdo da Web e
   </footer>
 </div>
 </div>
+<script src="/assets/js/search.js" data-label-text="Filtro para …"
+        data-input-placeholder="etiqueta ou título">
+</script>
