--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -53,5 +53,6 @@ $on-laptop:        992px;
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
         "base",
-        "layout"
+        "layout",
+        "search"
 ;
