Add general impact form (issue #210)

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -374,6 +374,12 @@
                 padding: 20px;
             }
         }
+
+        .attention-link {
+          font-size: 1.5em;
+          font-weight: bold;
+          text-align: center;
+        }
     }
 
     .activity-img {
